# share-cost

./: .dockerignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  render.yaml
.github/workflows/: ci.yml
backend/: .gitignore  Cargo.toml  Rocket.toml
backend/migrations/: 001_initial_schema.sql  V2__expense_types.sql  V3__member_payment_info.sql  V4__expense_date.sql  V5__currencies.sql  V6__share_links.sql  V7__split_types.sql  V8__longer_share_codes.sql  V9__last_activity.sql
backend/src/: auth.rs  db.rs  main.rs  models.rs  routes.rs
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  api.ts  expenseEmoji.ts  expenseUtils.ts  i18n.ts  main.tsx  offlineApi.ts  offlineDb.ts  storage.ts  sync.tsx
frontend/src/components/: CreateGroup.tsx  ExpenseCard.tsx  GroupDetail.tsx  GroupList.css  GroupList.tsx  ReceiptScanner.tsx
frontend/src/locales/: bar.json  de.json  en.json  es.json  fr.json  it.json  lld.json  pl.json
nginx/: Dockerfile  entrypoint.sh  nginx-init.conf  nginx.conf
