[package]
name = "share-cost-api"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5", features = ["json"] }
rocket_cors = "0.6"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "bigdecimal"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
jsonwebtoken = "9"
dotenvy = "0.15"
bigdecimal = "0.4"
once_cell = "1.19"
refinery = { version = "0.9", features = ["tokio-postgres"] }
tokio-postgres = "0.7"
